--- a/css/style3.css
+++ b/css/style3.css
@@ -26,3 +26,10 @@ font-size: 0.75em;
 @media (max-width: 767px) {
 
 }
+div { border: 0px solid gray; }
+
+.form-horizontal { padding: 20px; margin: 0 auto; max-width: 700px; }
+
+.control-label { background-color: black; color: white; padding-top: 0px; text-align: left; font-weight: bold; padding: 8px; font-size: 1em; border-radius: .4em; }
+
+.inputtext:focus { background-color: #FFFACD; }
